[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pyroj"
version = "1.1.0"
description = "Kurdish solar calendar and conversions (Gregorian, Persian/Jalali, tabular Islamic) using the Python standard library only."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Dolan Hêriş" }]
keywords = ["kurdish", "calendar", "date", "jalali", "persian", "islamic", "gregorian"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4.0",
    "mypy>=1.8.0",
]

[project.urls]
Homepage = "https://github.com/dolanskurd/pyroj"

[tool.setuptools.packages.find]
where = ["."]
include = ["pyroj*"]

[tool.setuptools.package-data]
pyroj = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"pyroj/locales/catalog.py" = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["pyroj"]
