[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pyroj"
version = "1.2.4"
description = "Kurdish solar calendar and conversions (Gregorian, Persian/Jalali, tabular Islamic) using the Python standard library only."
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.10"
authors = [{ name = "Dolan Hêriş" }]
keywords = [
    "kurdish", "kurdistan", "kurdish-calendar", 
    "sorani", "kurmanji", "datetime", "date", "time", 
    "calendar", "jalali", "persian", "islamic", 
    "hijri", "gregorian", "roj", "rojjmer"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Internationalization",
    "Topic :: Software Development :: Localization",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4.0",
    "mypy>=1.8.0",
]

[project.urls]
Homepage = "https://github.com/0xdolan/pyroj"

[tool.setuptools.packages.find]
where = ["."]
include = ["pyroj*"]

[tool.setuptools.package-data]
pyroj = ["py.typed", "locales/catalog.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["pyroj"]
